# AnkiSurvival

./: pyproject.toml  requirements.txt
ankiSurvival/: __init__.py  manifest.json
